--- a/truth/get-involved.html
+++ b/truth/get-involved.html
@@ -9,9 +9,10 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125214520"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125214520" />
+
+  <link rel="stylesheet" href="css/style.min.css" />
   <title>Get involved</title>
 </head>
 
@@ -268,6 +269,6 @@
 
       <!-- Подвал -->
     </div>
-    <script src="js/app.min.js?_v=20250125214520"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
