--- a/truth/page-projects.html
+++ b/truth/page-projects.html
@@ -9,9 +9,10 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125214520"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125214520" />
+
+  <link rel="stylesheet" href="css/style.min.css" />
   <title>Projects</title>
 </head>
 
@@ -56,10 +57,10 @@
       </p>
       <div class="discoveries__images">
         <div class="discoveries__img">
-          <picture><source srcset="img/discoveries-img-1.webp" type="image/webp"><img src="img/discoveries-img-1.png" alt="discoveries-img-1" /></picture>
+          <img src="img/discoveries-img-1.png" alt="discoveries-img-1" />
         </div>
         <div class="discoveries__img">
-          <picture><source srcset="img/discoveries-img-2.webp" type="image/webp"><img src="img/discoveries-img-2.png" alt="discoveries-img-2" /></picture>
+          <img src="img/discoveries-img-2.png" alt="discoveries-img-2" />
         </div>
       </div>
     </div>
@@ -219,7 +220,7 @@
       </svg>
     </a>
     <div class="effects__image">
-      <picture><source data-srcset="img/effects-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/effects-img.png" alt="effects-img" /></picture>
+      <img class="lazy" data-src="img/effects-img.png" alt="effects-img" />
     </div>
   </div>
 </section>
@@ -268,7 +269,7 @@
         </p>
       </div>
       <div class="impact__image">
-        <picture><source data-srcset="img/impact-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/impact-img.png" alt="impact-img" /></picture>
+        <img class="lazy" data-src="img/impact-img.png" alt="impact-img" />
       </div>
     </div>
   </div>
@@ -288,7 +289,7 @@
     </div>
 
     <div class="journey__logo">
-      <picture><source data-srcset="img/journey-logo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/journey-logo.png" alt="journey-logo" /></picture>
+      <img class="lazy" data-src="img/journey-logo.png" alt="journey-logo" />
     </div>
     <a href="#" class="journey__more">Get Involved Today</a>
   </div>
@@ -382,6 +383,6 @@
 
 			<!-- Подвал -->
 		</div>
-		<script src="js/app.min.js?_v=20250125214520"></script>
+		<script src="js/app.min.js"></script>
 	</body>
 </html>
