--- a/truth/get-involved.html
+++ b/truth/get-involved.html
@@ -9,10 +9,10 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250127133000"
   />
 
-  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250127133000" />
   <title>Get involved</title>
 </head>
 
@@ -43,6 +43,51 @@
     </div>
   </div>
 </header>
+
+<!-- Страницы -->
+<div class="btn-pages">СТРАНИЦЫ</div>
+<div class="pages">
+  <div class="pages__body">
+    <div data-close class="pages__close">
+      <svg
+        width="10"
+        height="10"
+        viewBox="0 0 10 10"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M9.72455 0.283027C9.43205 -0.00947264 8.95955 -0.00947264 8.66705 0.283027L4.99955 3.94303L1.33205 0.275527C1.03955 -0.0169727 0.567051 -0.0169727 0.274551 0.275527C-0.0179492 0.568027 -0.0179492 1.04053 0.274551 1.33303L3.94205 5.00053L0.274551 8.66803C-0.0179492 8.96053 -0.0179492 9.43303 0.274551 9.72553C0.567051 10.018 1.03955 10.018 1.33205 9.72553L4.99955 6.05803L8.66705 9.72553C8.95955 10.018 9.43205 10.018 9.72455 9.72553C10.0171 9.43303 10.0171 8.96053 9.72455 8.66803L6.05705 5.00053L9.72455 1.33303C10.0096 1.04803 10.0096 0.568027 9.72455 0.283027Z"
+          fill="#8998D3"
+        />
+      </svg>
+    </div>
+    <div>
+      <div class="pages__title">Main Pages</div>
+      <ul class="pages__items">
+        <li class="pages__item"><a href="index.html">Home</a></li>
+        <li class="pages__item"><a href="page-projects.html">Projects</a></li>
+        <li class="pages__item">
+          <a href="get-involved.html">Get Involved</a>
+        </li>
+      </ul>
+      <!-- <div class="pages__title">Range of Products</div> -->
+      <ul class="pages__items">
+        <!-- <li class="pages__item">
+          <a href="page-catalog-FL.html">Fiber Laser Machines</a>
+        </li> -->
+      </ul>
+      <!-- <div class="pages__title">Different versions of the product</div> -->
+      <ul class="pages__items">
+        <!-- <li class="pages__item"><a href="page-good.html">Product -V 1</a></li> -->
+      </ul>
+    </div>
+    <div></div>
+  </div>
+</div>
+<!-- Страницы -->
 
       <!-- Шапка -->
       <main>
@@ -269,6 +314,8 @@
 
       <!-- Подвал -->
     </div>
-    <script src="js/app.min.js"></script>
+    <script src="js/app.min.js?_v=20250127133000"></script>
+    <!-- Страницы -->
+    <script src="files/modalPages.js?_v=20250127133000"></script>
   </body>
 </html>
