--- a/truth/index.html
+++ b/truth/index.html
@@ -9,10 +9,10 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250127133000"
   />
 
-  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250127133000" />
   <title>Truth</title>
 </head>
 
@@ -121,6 +121,51 @@
   </div>
 </div>
 
+<!-- Страницы -->
+<div class="btn-pages">СТРАНИЦЫ</div>
+<div class="pages">
+  <div class="pages__body">
+    <div data-close class="pages__close">
+      <svg
+        width="10"
+        height="10"
+        viewBox="0 0 10 10"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M9.72455 0.283027C9.43205 -0.00947264 8.95955 -0.00947264 8.66705 0.283027L4.99955 3.94303L1.33205 0.275527C1.03955 -0.0169727 0.567051 -0.0169727 0.274551 0.275527C-0.0179492 0.568027 -0.0179492 1.04053 0.274551 1.33303L3.94205 5.00053L0.274551 8.66803C-0.0179492 8.96053 -0.0179492 9.43303 0.274551 9.72553C0.567051 10.018 1.03955 10.018 1.33205 9.72553L4.99955 6.05803L8.66705 9.72553C8.95955 10.018 9.43205 10.018 9.72455 9.72553C10.0171 9.43303 10.0171 8.96053 9.72455 8.66803L6.05705 5.00053L9.72455 1.33303C10.0096 1.04803 10.0096 0.568027 9.72455 0.283027Z"
+          fill="#8998D3"
+        />
+      </svg>
+    </div>
+    <div>
+      <div class="pages__title">Main Pages</div>
+      <ul class="pages__items">
+        <li class="pages__item"><a href="index.html">Home</a></li>
+        <li class="pages__item"><a href="page-projects.html">Projects</a></li>
+        <li class="pages__item">
+          <a href="get-involved.html">Get Involved</a>
+        </li>
+      </ul>
+      <!-- <div class="pages__title">Range of Products</div> -->
+      <ul class="pages__items">
+        <!-- <li class="pages__item">
+          <a href="page-catalog-FL.html">Fiber Laser Machines</a>
+        </li> -->
+      </ul>
+      <!-- <div class="pages__title">Different versions of the product</div> -->
+      <ul class="pages__items">
+        <!-- <li class="pages__item"><a href="page-good.html">Product -V 1</a></li> -->
+      </ul>
+    </div>
+    <div></div>
+  </div>
+</div>
+<!-- Страницы -->
+
       <!-- Шапка -->
       <main>
         <!-- Приветствие -->
@@ -130,7 +175,7 @@
     <div class="welcome__inner">
       <div class="welcome__text-start">the</div>
       <h1 class="welcome__sub-title">
-        <img src="img/img-logo.png" alt="img-logo" />
+        <picture><source srcset="img/img-logo.webp" type="image/webp"><img src="img/img-logo.png" alt="img-logo" /></picture>
       </h1>
       <div class="welcome__text-end">Will Set You Free</div>
     </div>
@@ -163,7 +208,7 @@
   <div class="new-era__container">
     <h2 class="new-era__title">A New Era of Truth and Unity Begins Here</h2>
     <div class="new-era__img">
-      <img class="lazy" data-src="img/new-era.png" alt="new-era" />
+      <picture><source data-srcset="img/new-era.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/new-era.png" alt="new-era" /></picture>
     </div>
     <p class="new-era__descr">
       Through innovation, tradition, and shared values, we aim to inspire every
@@ -190,7 +235,7 @@
             Interactive tools for uncovering biblical codes
           </p>
           <div class="our-initiatives__bg">
-            <img class="lazy" data-src="img/bg-our-1.png" alt="ai & toran" />
+            <picture><source data-srcset="img/bg-our-1.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-1.png" alt="ai & toran" /></picture>
           </div>
         </a>
         <a href="#" class="swiper-slide">
@@ -199,7 +244,7 @@
             A positive spin on news with "Boker Tov."
           </p>
           <div class="our-initiatives__bg">
-            <img class="lazy" data-src="img/bg-our-2.png" alt="ai & toran" />
+            <picture><source data-srcset="img/bg-our-2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-2.png" alt="ai & toran" /></picture>
           </div>
         </a>
         <a href="#" class="swiper-slide">
@@ -208,7 +253,7 @@
             Adventures uncovering hidden biblical truths
           </p>
           <div class="our-initiatives__bg">
-            <img class="lazy" data-src="img/bg-our-3.png" alt="ai & toran" />
+            <picture><source data-srcset="img/bg-our-3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-3.png" alt="ai & toran" /></picture>
           </div>
         </a>
         <a href="#" class="swiper-slide">
@@ -217,7 +262,7 @@
             Bringing Jewish traditions to life digitally
           </p>
           <div class="our-initiatives__bg">
-            <img class="lazy" data-src="img/bg-our-4.png" alt="ai & toran" />
+            <picture><source data-srcset="img/bg-our-4.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-4.png" alt="ai & toran" /></picture>
           </div>
         </a>
       </div>
@@ -236,7 +281,7 @@
       <div class="about__wrapper">
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-2.png" alt="person-1" />
+            <picture><source srcset="img/person-2.webp" type="image/webp"><img src="img/person-2.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -253,7 +298,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -270,7 +315,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -287,7 +332,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-2.png" alt="person-1" />
+            <picture><source srcset="img/person-2.webp" type="image/webp"><img src="img/person-2.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -304,7 +349,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-3.png" alt="person-1" />
+            <picture><source srcset="img/person-3.webp" type="image/webp"><img src="img/person-3.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -321,7 +366,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-4.png" alt="person-1" />
+            <picture><source srcset="img/person-4.webp" type="image/webp"><img src="img/person-4.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -338,7 +383,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-5.png" alt="person-1" />
+            <picture><source srcset="img/person-5.webp" type="image/webp"><img src="img/person-5.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -355,7 +400,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-6.png" alt="person-1" />
+            <picture><source srcset="img/person-6.webp" type="image/webp"><img src="img/person-6.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -372,7 +417,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-7.png" alt="person-1" />
+            <picture><source srcset="img/person-7.webp" type="image/webp"><img src="img/person-7.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -389,7 +434,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-8.png" alt="person-1" />
+            <picture><source srcset="img/person-8.webp" type="image/webp"><img src="img/person-8.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -406,7 +451,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-9.png" alt="person-1" />
+            <picture><source srcset="img/person-9.webp" type="image/webp"><img src="img/person-9.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -423,7 +468,7 @@
         </div>
         <div class="about__slider">
           <div class="about__image">
-            <img src="img/person-4.png" alt="person-1" />
+            <picture><source srcset="img/person-4.webp" type="image/webp"><img src="img/person-4.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -445,7 +490,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -462,7 +507,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -479,7 +524,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -496,7 +541,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -513,7 +558,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -530,7 +575,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -547,7 +592,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -564,7 +609,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -581,7 +626,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -598,7 +643,7 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <img src="img/person-1.png" alt="person-1" />
+            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="person-1" /></picture>
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -624,7 +669,7 @@
         <section class="prev-logo">
   <div class="prev-logo__container">
     <div class="prev-logo__img">
-      <img src="img/prev-logo.png" alt="prev-logo" />
+      <picture><source srcset="img/prev-logo.webp" type="image/webp"><img src="img/prev-logo.png" alt="prev-logo" /></picture>
     </div>
   </div>
 </section>
@@ -641,7 +686,7 @@
     </p>
   </div>
   <div class="conversation__image">
-    <img src="img/maps-img.png" alt="maps" />
+    <picture><source srcset="img/maps-img.webp" type="image/webp"><img src="img/maps-img.png" alt="maps" /></picture>
   </div>
 </section>
 
@@ -796,9 +841,11 @@
 
       <!-- Подвал -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/app.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250127133000"></script>
+    <script src="js/app.min.js?_v=20250127133000"></script>
     <!-- Валидация формы -->
-    <script src="files/validForm.js"></script>
+    <script src="files/validForm.js?_v=20250127133000"></script>
+    <!-- Страницы -->
+    <script src="files/modalPages.js?_v=20250127133000"></script>
   </body>
 </html>
